(library
 (foreign_stubs
  (language c)
  (names internalhash_stubs))
 (name base_internalhash_types)
 (public_name base.base_internalhash_types)
 (libraries)
 (preprocess no_preprocessing)
 (wasm_of_ocaml
  (wasm_files runtime.wat)
  (javascript_files runtime.js))
 (js_of_ocaml
  (javascript_files runtime.js))
 (install_c_headers internalhash))
